--- a/views/room.ejs
+++ b/views/room.ejs
@@ -10,6 +10,7 @@
 	<script>
 		let ROOMID = "<%=room_id%>";
 	</script>
+	<script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="script.js"></script>
 </body>
